--- a/forms.html
+++ b/forms.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HTML Forms</title>
+        <title>WELCOME TO MY HTML Forms</title>
     </head>
 
     <body>
