--- a/forms.html
+++ b/forms.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>WELCOME TO MY HTML Forms</title>
+        <title>HTML Forms</title>
     </head>
 
     <body>
 
 
 
-        <h1>HTML FORMS</h1>
+        <h1>WELCOME TO MY HTML FORMS</h1>
 
         <a href="index.html">Lesson 1</a>
         <a href="lesson2.html">Lesson 2</a>
